<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackWaterloo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Generic Strings -->
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="at">at</string>
    <string name="loading">Just a secading</string>
    <string name="when">When</string>
    <string name="price">Price</string>
    <string name="seats">Seats</string>
    <string name="currency_symbol">$</string>
    <string name="success">Success</string>
    <string name="time_old">Can\'t use this time</string>
    <string name="departing">Departing:&#160;</string>
    <string name="arriving">Arriving:&#160;</string>

    <plurals name="plural_seat">
        <item quantity="one">Seat</item>
        <item quantity="other">Seats</item>
    </plurals>

    <!-- Log In -->
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="app_id">921710994512078</string>
    <string name="title_activity_events_page">EventsPageActivity</string>

    <!-- Time units -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <plurals name="time_unit_hour">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="time_unit_minute">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>

    <string name="actionbar_title_find_a_ride">Find a Ride</string>
    <string name="actionbar_title_post_a_ride">Post a Ride</string>
    <string name="actionbar_title_my_profile">My Profile</string>

    <!-- Splash Page Activity -->
    <string name="splash_page">The Best Splash Page</string>

    <!-- LogIn Activity -->
    <string name="log_in_button_facebook">Log in with Facebook</string>
    <string name="log_in_phone_input_hint">Enter your phone number</string>

    <!-- Post A Ride Fragment -->
    <string name="post_ride_title">Post a Ride</string>
    <string name="post_ride_spinner_start_prompt">Starting location</string>
    <string name="post_ride_spinner_end_prompt">Destination</string>
    <string name="post_ride_edittext_hint_price">Price</string>
    <string name="post_ride_text_seats_hint">Seats</string>
    <string name="post_ride_edittext_hint_description">Write a description</string>
    <string name="post_ride_button_start_date">Start date</string>
    <string name="post_ride_button_end_date">End date</string>
    <string name="post_ride_text_location_hint">------</string>
    <string name="post_ride_text_view_post">View post</string>

    <!-- Find A Ride Fragment -->
    <string name="find_ride_filter">Filter results</string>
    <string name="find_ride_price_filler">$12</string>
    <string name="find_ride_seats">Seats: %s</string>
    <string name="find_ride_rating">Rating: 4.5</string>
    <string name="find_ride_filter_max_price_hint">Maximum price</string>
    <string name="find_ride_filter_prompt">Didn\'t find what you\'re looking for?  Try applying a filter</string>
    <string name="dialog_filter_title">Filter results</string>
    <string name="dialog_spinner_start_promt">Starting location</string>
    <string name="dialog_spinner_end_prompt">Destination</string>

    <!-- Find A Ride Filter -->
    <string name="filter_filter">Filter</string>
    <string name="filter_edittext_hint_price">Maximum</string>
    <string name="filter_button_when">Select time</string>
    <string name="filter_button_apply">Apply</string>

    <string-array name="filter_when_type">
        <item>Departing</item>
        <item>Arriving</item>
    </string-array>

    <!-- Cities Departure -->
    <string-array name="cities_departure">
        <item>Start Point</item>
        <item>Toronto</item>
        <item>Etobicoke</item>
        <item>Brampton</item>
        <item>Scarborough</item>
        <item>Richmond Hill</item>
        <item>Waterloo</item>
        <item>London</item>
        <item>Kitchener</item>
        <item>Mississauga</item>
        <item>Newmarket</item>
        <item>Vaughn</item>
    </string-array>
	<!-- Cities Destination-->
    <string-array name="cities_arrival">
        <item>Destination</item>
        <item>Toronto</item>
        <item>Etobicoke</item>
        <item>Brampton</item>
        <item>Scarborough</item>
        <item>Richmond Hill</item>
        <item>Waterloo</item>
        <item>London</item>
        <item>Kitchener</item>
        <item>Mississauga</item>
        <item>Newmarket</item>
        <item>Vaughn</item>
    </string-array>
    <!-- Navigation Drawer Titles -->
    <string name="drawer_item_my_profile">My Profile</string>
    <string name="drawer_item_find_a_ride">Find a Ride</string>
    <string name="drawer_item_post_a_ride">Post A Ride</string>
    <string name="drawer_item_log_out">Log Out</string>

    <!-- Event Page Fragment -->
    <string name="event_status">Request a Ride</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="passenger_rating">Passenger Rating</string>
    <string name="event_user_num_ratings">(2)</string>
    <string name="event_details_price">$15.00</string>
    <string name="event_details_seats_remaining">Seats Remaining:&#160;</string>
    <string name="event_details_seats">3</string>
    <string name="event_details_description">Description: </string>

</resources>