<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_filter_textview_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingLeft="@dimen/touchable_ui_spacing"
        android:paddingRight="@dimen/touchable_ui_spacing"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/dialog_filter_title"
        android:textColor="@color/app_theme_color"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/fake_seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:contentDescription="@string/app_name"
        android:src="@color/app_theme_color" />

    <LinearLayout
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin" >

        <Spinner
            android:id="@+id/dialog_filter_spinner_startpoint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_item_height"
            android:layout_marginBottom="@dimen/touchable_ui_spacing"
            android:prompt="@string/dialog_spinner_start_promt"
            android:entries="@array/cities" />

        <Spinner
            android:id="@+id/dialog_filter_spinner_endpoint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_item_height"
            android:layout_marginBottom="@dimen/touchable_ui_spacing"
            android:prompt="@string/dialog_spinner_end_prompt"
            android:entries="@array/cities" />

        <EditText
            android:id="@+id/dialog_filter_edittext_max_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_item_height"
            android:layout_marginBottom="@dimen/touchable_ui_spacing"
            android:hint="@string/find_ride_filter_max_price_hint"
            android:inputType="number" />

        <SeekBar
            android:id="@+id/dialog_filter_minimum_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/touchable_ui_spacing"
            android:max="10" />
    </LinearLayout>

</LinearLayout>