<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/nav_drawer_width"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_marginBottom="48dp"
        android:orientation="vertical" >

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_filter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/filter_spinner_depart_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/filter_checkbox_depart_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/filter_spinnear_arrival_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/filter_checkbox_arrival_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing" >

            <TextView.RobotoLight
                android:id="@+id/filter_text_title_price"
                style="@style/DreamTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/price" />

            <TextView.RobotoLight
                android:id="@+id/filter_text_price_currency_symbol"
                style="@style/DreamTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/filter_text_title_price"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/touchable_ui_spacing"
                android:layout_toRightOf="@id/filter_text_title_price"
                android:text="@string/currency_symbol" />

            <EditText.RobotoLight
                android:id="@+id/post_ride_edittext_price"
                style="@style/DreamTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/filter_text_title_price"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/filter_text_price_currency_symbol"
                android:hint="@string/filter_edittext_hint_price"
                android:inputType="number"
                android:maxLength="5" />

            <CheckBox
                android:id="@+id/filter_checkbox_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing" >

            <TextView.RobotoLight
                android:id="@+id/filter_text_title_seats"
                style="@style/DreamTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seats" />

            <TextView.RobotoLight
                style="@style/DreamTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/filter_text_title_seats"
                android:layout_marginLeft="@dimen/touchable_ui_spacing"
                android:layout_toRightOf="@id/filter_text_title_seats" />

            <CheckBox
                android:id="@+id/filter_checkbox_seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <SeekBar
                android:id="@+id/filter_seekbar_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_text_title_seats"
                android:layout_marginTop="@dimen/touchable_ui_spacing"
                android:layout_toLeftOf="@id/filter_checkbox_seats" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing" >

            <TextView.RobotoLight
                android:id="@+id/filter_text_title_when"
                style="@style/DreamTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when" />

            <TextView.RobotoCondensedRegular
                style="@style/DreamTextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/filter_text_title_when"
                android:layout_marginLeft="@dimen/touchable_ui_spacing"
                android:layout_toRightOf="@id/filter_text_title_when" />

            <CheckBox
                android:id="@+id/filter_checkbox_when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <Spinner
                android:id="@+id/filter_spinner_when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_text_title_when"
                android:layout_marginTop="@dimen/touchable_ui_spacing"
                android:layout_toLeftOf="@id/filter_checkbox_when" />

            <Button.RobotoRegular
                android:id="@+id/filter_button_when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_spinner_when"
                android:layout_marginTop="@dimen/touchable_ui_spacing"
                android:layout_toLeftOf="@id/filter_checkbox_when"
                android:text="@string/filter_button_when" />
        </RelativeLayout>

        <Button.RobotoRegular
            android:id="@+id/filter_button_submit"
            style="@style/button_generic_alternate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_item_spacing"
            android:text="@string/filter_button_apply" />
    </LinearLayout>

</ScrollView>